--- a/src/app/client/cs-footer/cs-footer.component.html
+++ b/src/app/client/cs-footer/cs-footer.component.html
@@ -6,10 +6,14 @@
     <span>Green Planet Bikeshop PH</span>
   </div>
   <div class='item item-3' fxFlex='30%'>
-    <div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center center'>
+    <div class='container' fxLayout fxLayout.xs='column'  fxLayout='column' fxLayoutAlign='center center'>
       <a class='item item-1' fxFlex='100%' href='tel:+639495627190' target='_blank' rel='noopener noreferrer'>
-        <i><mat-icon>telephone</mat-icon></i>
-        &nbsp;+639495627190
+        <span>Contact:&nbsp;</span>
+        +639495627190
+      </a>
+      <a class='item item-2' fxFlex='100%' href='https://web.facebook.com/erwin.rili/' target='_blank'>
+        <span>Facebook:&nbsp;</span>
+        erwin.rili
       </a>
     </div>
   </div>
