--- a/src/app/client/cs-home/cs-home.component.html
+++ b/src/app/client/cs-home/cs-home.component.html
@@ -3,38 +3,38 @@
   <div class='item item-2' fxFlex='100%'>
     <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px'>
       <div class='' fxFlex='10%'></div>
-      <div class='item item-2' fxFlex='30%'>
+      <div class='item item-2' fxFlex='35%'>
         <div class='quote-container' unselectable='on'>
-          <h1>Increase Global Cycling ,</h1>
+          <h1>Increase Global Cycling,</h1>
           <h1>Decrease Global Warming</h1>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='left' fxLayoutGap='20px' style='margin-top: 10px'>
+<div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 10px'>
   <div class='item item-1' fxFlex='70%'>
     <mat-card>
       <mat-card-header>
         <mat-card-title>About our shop</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p class='indent'>
+        <p class='indent siteFontSize'>
           Greenplanet bike shop is an official dealer of bicycles in Laguna specially in San Pablo City. It offers one of the lowest priced built bikes. It also offers wholesale and retail of bicycles, spare parts and accessories.
           We carry a wide range of branded Bike products from Shimano, Trinx bicycles, Cannondale bicycles, GT Bicycles, Trek bicycles, Cateye, Suntour, Maxxis, Schwalbe, Dabomb, Vision and many more.
           Greenplanet bike shop caters to bike enthusiasts in need of Bicycles, Bike Spare Parts, and Bike Accessories.
         </p>
-        <p class='indent'>Greenplanet Bike Shop started since April 2000 and owned by Mr. Erwil Rili.</p>
+        <p class='indent siteFontSize'>Greenplanet Bike Shop started since April 2000 and owned by Mr. Erwil Rili.</p>
       </mat-card-content>
     </mat-card>
   </div>
-  <div class='item item-2' fxFlex='30%'>
+  <div class='item item-1' fxFlex='30%'>
     <mat-card>
       <mat-card-header>
         <mat-card-title>Shop hours</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <span>Shop hours are from 9:00 o’clock in the morning until 7:00 o’clock in the evening.</span>
+        <span class='siteFontSize'>Shop hours are from 9:00 o’clock in the morning until 7:00 o’clock in the evening.</span>
       </mat-card-content>
     </mat-card>
   </div>
