--- a/src/app/client/cs-services/cs-services.component.html
+++ b/src/app/client/cs-services/cs-services.component.html
@@ -1,14 +1,118 @@
-<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 30px'>
-  <div class='item item-1' fxFlex='5%'></div>
-  <div class='item item-2' fxFlex='90%'>
+<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 7px; width: 100%'>
+  <div class='item item-2' fxFlex='100%'>
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Services Offered (Under Construction)</mat-card-title>
+        <mat-card-title>Services Offered</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-
+        <p class='indent siteFontSize'>Greenplanet Bike Shop is also a full service bike shop. Services include bike repairs, tune-up, bike assembly, bike detailing, bike wash, wheel truing, sale of bike parts and accessories.</p>
+        <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap='20px'>
+          <div class='item item-1' fxFlex='100%'>
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title>Service Packages</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                  <div class='item item-1' fxFlex='30%'>
+                    <mat-card>
+                      <mat-card-header>
+                        <mat-card-title>Php 2,250.00</mat-card-title>
+                      </mat-card-header>
+                      <mat-card-content class='siteFontSize'>
+                        <p>Adjust Derailleurs</p>
+                        <p>Adjust Brakes</p>
+                        <p>Lube Chain</p>
+                        <p>Tire Inflation and Inspection</p>
+                        <p>Test Ride</p>
+                      </mat-card-content>
+                    </mat-card>
+                  </div>
+                  <div class='item item-2' fxFlex='30%'>
+                    <mat-card>
+                      <mat-card-header>
+                        <mat-card-title>Php 3,550.00</mat-card-title>
+                      </mat-card-header>
+                      <mat-card-content class='siteFontSize'>
+                        <p>Adjust Derailleurs</p>
+                        <p>Adjust Brakes</p>
+                        <p>Minor Wheel Truing</p>
+                        <p>Lube Chain and Derailleurs Pivots</p>
+                        <p>Basic wipe off of chain</p>
+                        <p>Tire Inflation and Inspection</p>
+                        <p>Frame and Fork Inspect</p>
+                        <p>Check Nuts and Bolts for Proper Tightness with torque wrench</p>
+                        <p>General bicycle wipe down</p>
+                        <p>Test Ride</p>
+                      </mat-card-content>
+                    </mat-card>
+                  </div>
+                  <div class='item item-3' fxFlex='30%'>
+                    <mat-card>
+                      <mat-card-header>
+                        <mat-card-title>Php 4,750.00</mat-card-title>
+                      </mat-card-header>
+                      <mat-card-content class='siteFontSize'>
+                        <p>Adjust Derailleurs</p>
+                        <p>Adjust Brakes</p>
+                        <p>Cables Lubed as needed</p>
+                        <p>True Wheels off the bike</p>
+                        <p>Lube Chain and Derailleurs Pivots</p>
+                        <p>Frame and Fork Inspect</p>
+                        <p>Remove and Lube seat post</p>
+                        <p>Check Nuts and Bolts for Proper Tightness</p>
+                        <p>General bicycle wipe down</p>
+                        <p>Tire Inflation and Inspection</p>
+                        <p>Hub set, Bottom Bracket and Headset adjusted as needed</p>
+                        <p>Replacement of brake pads, cables and housing (parts are extra)</p>
+                        <p>Test Ride</p>
+                      </mat-card-content>
+                    </mat-card>
+                  </div>
+                </div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+          <div class='item item-2' fxFlex='100%'>
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title>Bike Shop Repair Services</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                  <div class='item item-1 siteFontSize' fxFlex='30%'>
+                    <p>Install Tube & Tire On/Off Bike ₱ 300.00</p>
+                    <p>Install Tubular Tire ₱ 900.00</p>
+                    <p>Standard Wheel True ₱ 250.00</p>
+                    <p>Drive Train Clean ₱ 700.00</p>
+                    <p>Bare Necessities Tune ₱ 500.00</p>
+                    <p>Essential Tune ₱ 800.00</p>
+                    <p>Ultra Tune ₱ 900.00</p>
+                  </div>
+                  <div class='item item-2 siteFontSize' fxFlex='30%'>
+                    <p>Elite Tune ₱ 1200.00</p>
+                    <p>Overhaul Package (+ Parts) ₱ 9000.00</p>
+                    <p>Pro Wheel Build ₱ 3000.00</p>
+                    <p>Shop Labor Rate ₱ 3300.00</p>
+                    <p>Box Bike for Shipping ₱ 3000.00</p>
+                    <p>Storage (Goods Over 7 Days Fee Per Day) ₱ 200.00</p>
+                    <p>Adjust Brakes Front Disc ₱ 800.00</p>
+                  </div>
+                  <div class='item item-3 siteFontSize' fxFlex='30%'>
+                    <p>Adjust Brakes Front Non Disc ₱ 500.00</p>
+                    <p>Adjust Brakes Rear Disc ₱ 800.00</p>
+                    <p>Adjust Brakes Rear Non Disc ₱ 500.00</p>
+                    <p>Adjust Front Derailleur ₱ 500.00</p>
+                    <p>Adjust Rear Derailleur ₱ 500.00</p>
+                    <p>Assembled Boxed Geared Bicycle ₱ 3800.00</p>
+                    <p>Bleed Hydraulic Disc Brake Front ₱ 1500.00</p>
+                  </div>
+                </div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
-  <div class='item item-3' fxFlex='5%'></div>
 </div>
