--- a/src/app/response-code/not-found/not-found.component.html
+++ b/src/app/response-code/not-found/not-found.component.html
@@ -1,3 +1,7 @@
-<p>
-  not-found works!
-</p>
+<mat-toolbar color='primary' class='mat-elevation-z7' style='width: 100%'>
+  <span style='margin-left: 10px'>Green Planet Bikeshop</span>
+</mat-toolbar>
+<div>
+  <p>URL not found</p>
+  <p>Back to <a [routerLink]='route'>home</a></p>
+</div>
