--- a/src/app/client/cs-footer/cs-footer.component.scss
+++ b/src/app/client/cs-footer/cs-footer.component.scss
@@ -1,8 +1,12 @@
 .footer {
-  height: 100px;
+  height: 150px;
   background-color:
   #388E3C;
   font-size: 15px;
   color: white;
   text-align: center;
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
