--- a/src/app/client/cs-products/cs-products.component.scss
+++ b/src/app/client/cs-products/cs-products.component.scss
@@ -1,21 +1,8 @@
-ul {
-  list-style-type: none;
-  margin: 0; padding: 0;
-
-  li {
-    background: #E8F2E9;
-    padding: 2em;
-    border-radius: 4px;
-    margin-bottom: 7px;
-    display: grid;
-    grid-template-columns: 60px auto;
-    p {
-      font-weight: bold;
-      margin-left: 20px;
-    }
-  }
+.lsItem {
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
-.viewBtn {
-  cursor: pointer;
+.imgBorder {
+  border: 1px solid black;
 }
