Added few features

--- a/src/app/client/cs-nav/cs-nav.component.html
+++ b/src/app/client/cs-nav/cs-nav.component.html
@@ -15,5 +15,9 @@
   <a mat-menu-item routerLink='/products'>&nbsp;Products&nbsp;</a>
   <a mat-menu-item routerLink='/services'>&nbsp;Services&nbsp;</a>
 </mat-menu>
-<router-outlet></router-outlet>
+
+  <router-outlet #scroll>
+
+  </router-outlet>
+
 <app-cs-footer></app-cs-footer>
