--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,7 @@ body { min-height: 100%; margin: 0; margin-bottom: -150px; font-family: 'Century
 p.indent {
 	text-indent: 50px;
 }
+
+.mat-card-title {
+	font-weight: bold;
+}
