--- a/src/app/client/cs-home/cs-home.component.html
+++ b/src/app/client/cs-home/cs-home.component.html
@@ -46,11 +46,35 @@
         <mat-card-title>Featured Products</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center center' fxLayoutGap='20px' *ngIf='featProd'>
+        <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center center' fxLayoutGap='20px' *ngIf='featProd.length > 0'>
           <div class='item item-1' fxFlex='25%' *ngFor='let itm of featProd' style='text-align: center'>
             <img class='click' [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100px' height='100px' (click)='viewImg(itm.img)'>
             <p>{{ itm.name }}</p>
             <p>{{ ('₱ ') + itm.price }}</p>
+          </div>
+        </div>
+        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout='row' fxLayoutAlign='center center' fxLayoutGap='20px'>
+          <div class='item item-1' fxFlex='70%'></div>
+          <div class='item item-2' fxFlex='10%'>
+            <a mat-raised-button routerLink='/products' color='primary'>View other products here >></a>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
+<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 10px'>
+  <div class='item item-1' fxFlex='100%'>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Services</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p class='indent siteFontSize'>Greenplanet Bike Shop is also a full service bike shop. Services include bike repairs, tune-up, bike assembly, bike detailing, bike wash, wheel truing, sale of bike parts and accessories.</p>
+        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout='row' fxLayoutAlign='center center' fxLayoutGap='20px' *ngIf='featProd'>
+          <div class='item item-1' fxFlex='70%'></div>
+          <div class='item item-2' fxFlex='10%'>
+            <a mat-raised-button routerLink='/services' color='primary'>View our services here >></a>
           </div>
         </div>
       </mat-card-content>
