--- a/src/app/client/cs-products/cs-products.component.html
+++ b/src/app/client/cs-products/cs-products.component.html
@@ -5,15 +5,22 @@
         <mat-card-title>Products</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='left' fxLayoutGap='20px'>
-          <div class='item item-1' fxFlex='100%'>
+        <mat-tab-group>
+          <mat-tab label='Bikes'>
             <mat-card>
               <mat-card-header>
                 <mat-card-title>Bikes</mat-card-title>
               </mat-card-header>
               <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Sort by:</mat-label>
+                  <mat-select [(ngModel)]='bikesOpt' (selectionChange)='sortBike(bikesOpt)' name='bikesOpt' [disabled]='bikes.length == 0'>
+                    <mat-option value='Name'>Name (A to Z)</mat-option>
+                    <mat-option value='Price'>Price (Low to High)</mat-option>
+                  </mat-select>
+                </mat-form-field>
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
-                  <div *ngIf='!bikes'>No products yet</div>
+                  <div *ngIf='bikes.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of bikes'>
                     <mat-card class='lsItem' (click)='viewProd(itm)'>
                       <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
@@ -27,15 +34,22 @@
                 </div>
               </mat-card-content>
             </mat-card>
-          </div>
-          <div class='item item-2' fxFlex='100%'>
+          </mat-tab>
+          <mat-tab label='Accessories'>
             <mat-card>
               <mat-card-header>
                 <mat-card-title>Accessories</mat-card-title>
               </mat-card-header>
               <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Sort by:</mat-label>
+                  <mat-select [(ngModel)]='accsOpt' (selectionChange)='sortAccs(accsOpt)' name='accsOpt' [disabled]='accessories.length == 0'>
+                    <mat-option value='Name'>Name (A to Z)</mat-option>
+                    <mat-option value='Price'>Price (Low to High)</mat-option>
+                  </mat-select>
+                </mat-form-field>
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
-                  <div *ngIf='!accessories'>No products yet</div>
+                  <div *ngIf='accessories.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of accessories'>
                     <mat-card class='lsItem' (click)='viewProd(itm)'>
                       <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
@@ -49,15 +63,22 @@
                 </div>
               </mat-card-content>
             </mat-card>
-          </div>
-          <div class='item item-3' fxFlex='100%'>
+          </mat-tab>
+          <mat-tab label='Wheels'>
             <mat-card>
               <mat-card-header>
                 <mat-card-title>Wheels</mat-card-title>
               </mat-card-header>
               <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Sort by:</mat-label>
+                  <mat-select [(ngModel)]='wheelOpt' (selectionChange)='sortWhls(wheelOpt)' name='wheelOpt' [disabled]='wheels.length == 0'>
+                    <mat-option value='Name'>Name (A to Z)</mat-option>
+                    <mat-option value='Price'>Price (Low to High)</mat-option>
+                  </mat-select>
+                </mat-form-field>
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
-                  <div *ngIf='!wheels'>No products yet</div>
+                  <div *ngIf='wheels.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of wheels'>
                     <mat-card class='lsItem' (click)='viewProd(itm)'>
                       <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
@@ -71,15 +92,22 @@
                 </div>
               </mat-card-content>
             </mat-card>
-          </div>
-          <div class='item item-4' fxFlex='100%'>
+          </mat-tab>
+          <mat-tab label='Components'>
             <mat-card>
               <mat-card-header>
                 <mat-card-title>Components</mat-card-title>
               </mat-card-header>
               <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Sort by:</mat-label>
+                  <mat-select [(ngModel)]='comptsOpt' (selectionChange)='sortCompts(comptsOpt)' name='comptsOpt' [disabled]='components.length == 0'>
+                    <mat-option value='Name'>Name (A to Z)</mat-option>
+                    <mat-option value='Price'>Price (Low to High)</mat-option>
+                  </mat-select>
+                </mat-form-field>
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
-                  <div *ngIf='!components'>No products yet</div>
+                  <div *ngIf='components.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of components'>
                     <mat-card class='lsItem' (click)='viewProd(itm)'>
                       <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
@@ -93,15 +121,22 @@
                 </div>
               </mat-card-content>
             </mat-card>
-          </div>
-          <div class='item item-5' fxFlex='100%'>
+          </mat-tab>
+          <mat-tab label='Workshop'>
             <mat-card>
               <mat-card-header>
                 <mat-card-title>Workshop</mat-card-title>
               </mat-card-header>
               <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Sort by:</mat-label>
+                  <mat-select [(ngModel)]='workspOpt' (selectionChange)='sortWorksp(workspOpt)' name='workspOpt' [disabled]='workshop.length == 0'>
+                    <mat-option value='Name'>Name (A to Z)</mat-option>
+                    <mat-option value='Price'>Price (Low to High)</mat-option>
+                  </mat-select>
+                </mat-form-field>
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
-                  <div *ngIf='!workshop'>No products yet</div>
+                  <div *ngIf='workshop.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of workshop'>
                     <mat-card class='lsItem' (click)='viewProd(itm)'>
                       <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
@@ -115,8 +150,8 @@
                 </div>
               </mat-card-content>
             </mat-card>
-          </div>
-        </div>
+          </mat-tab>
+        </mat-tab-group>
       </mat-card-content>
     </mat-card>
   </div>
