Minor changes in design; ToDo: Photo gallery

--- a/src/app/client/cs-footer/cs-footer.component.html
+++ b/src/app/client/cs-footer/cs-footer.component.html
@@ -1,11 +1,11 @@
 <div class='container footer' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center center' fxLayoutGap.xs='20px' >
   <div class='item item-1' fxFlex='30%'>
-    <span>No. 28, T. Azucena St., San Pablo City, Laguna, 4000</span>
+    <span></span>
   </div>
-  <div class='item item-2' fxFlex='40%'>
+  <div class='item item-1' fxFlex='40%'>
     <span>Green Planet Bikeshop PH</span>
   </div>
-  <div class='item item-3' fxFlex='30%'>
+  <div class='item item-2' fxFlex='30%'>
     <div class='container' fxLayout fxLayout.xs='column'  fxLayout='column' fxLayoutAlign='center center'>
       <a class='item item-1' fxFlex='100%' href='tel:+639495627190' target='_blank' rel='noopener noreferrer'>
         <span>Contact:&nbsp;</span>
