--- a/src/app/client/cs-home/cs-home.component.scss
+++ b/src/app/client/cs-home/cs-home.component.scss
@@ -1,15 +1,9 @@
-.first-col {
-  margin-top: 7px;
-  background: #ffffff url("/assets/mtb7.jpg") no-repeat center;
-  height: 700px;
-  width: 100%;
-  background-size: cover;
-}
-
 .quote-container {
+  position: relative;
   background: rgba(0, 0, 0, 0.57);
   color: #fff;
   padding: 0.5em;
+  z-index: 10;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -25,4 +19,24 @@
   &:hover {
     background-color: rgba(#7AB37D, 0.6);
   }
+}
+
+#map {
+  height: 500px;
+  width: 100%;
+}
+
+
+.ftItem {
+  width: 130px;
+  height: 130px;
+  border: 1px solid gray;
+}
+
+.ftItemName {
+  font-size: 1.2em;
+}
+
+.doneLoading {
+  display: none;
 }
