--- a/src/app/client/cs-home/feat-img-view/feat-img-view.component.html
+++ b/src/app/client/cs-home/feat-img-view/feat-img-view.component.html
@@ -1,1 +1,3 @@
-<img [src]='imgSrc | imageData' width=100% height='80%'>
+<div class='container' fxLayout fxLayoutAlign='center center'>
+  <img [src]='imgSrc | imageData' class='item item-1' fxFlex='100%'>
+</div>
