--- a/src/app/client/cs-nav/cs-nav.component.html
+++ b/src/app/client/cs-nav/cs-nav.component.html
@@ -16,8 +16,10 @@
   <a mat-menu-item routerLink='/services'>&nbsp;Services&nbsp;</a>
 </mat-menu>
 
-  <router-outlet #scroll>
+<div class='routeView'>
+  <router-outlet>
 
   </router-outlet>
+</div>
 
 <app-cs-footer></app-cs-footer>
