--- a/src/app/server/update-acct-info/update-acct-info.component.html
+++ b/src/app/server/update-acct-info/update-acct-info.component.html
@@ -1,7 +1,7 @@
 <div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' style='margin-top: 30px'>
   <div class='item item-1' fxFlex='5%'></div>
   <div class='item item-2' fxFlex='90%'>
-    <mat-card fxFlex='100%'>
+    <mat-card fxFlex='100%' class='mat-elevation-z8'>
       <form (ngSubmit)='updateAcct(acctInfo, $event)'>
         <mat-card-header>
           <mat-card-title>Update Account</mat-card-title>
