--- a/src/app/client/cs-nav/cs-nav.component.scss
+++ b/src/app/client/cs-nav/cs-nav.component.scss
@@ -1,3 +1,14 @@
 .spacer {
   flex: 1 1 auto;
 }
+
+.mat-toolbar {
+  position: fixed;
+  position: --webkit-sticky;
+  top: 0;
+  z-index: 3;
+}
+
+.routeView {
+  margin-top: 75px;
+}
