--- a/src/app/client/cs-products/cs-products.component.html
+++ b/src/app/client/cs-products/cs-products.component.html
@@ -1,13 +1,13 @@
-<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='left' fxLayoutGap='20px' style='margin-top: 7px; width: 100%'>
+<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='left' fxLayoutGap='20px' style='margin: 10px'>
   <div class='item item-1' fxFlex='100%'>
-    <mat-card>
+    <mat-card class='mat-elevation-z8'>
       <mat-card-header>
         <mat-card-title>Products</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <mat-tab-group>
+        <mat-tab-group *ngIf='prod.length > 0'>
           <mat-tab label='Bikes'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Bikes</mat-card-title>
               </mat-card-header>
@@ -19,15 +19,19 @@
                     <mat-option value='Price'>Price (Low to High)</mat-option>
                   </mat-select>
                 </mat-form-field>
-                <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
+                <div class='container' fxLayout fxLayout.xs='row wrap' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
                   <div *ngIf='bikes.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of bikes'>
-                    <mat-card class='lsItem' (click)='viewProd(itm)'>
-                      <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
+                    <mat-card class='lsItem mat-elevation-z8' (click)='viewProd(itm)'>
                       <mat-card-content>
-                        <p>{{ itm.name }}</p>
-                        <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
-                        <span>{{ ('₱ ') + itm.price }}</span>
+                        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout.md='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                          <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
+                          <div class='item item-2' fxFlex='50%'>
+                            <p><b>{{ itm.name }}</b></p>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>{{ ('₱ ') + itm.price }}</span>
+                          </div>
+                        </div>
                       </mat-card-content>
                     </mat-card>
                   </div>
@@ -36,7 +40,7 @@
             </mat-card>
           </mat-tab>
           <mat-tab label='Accessories'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Accessories</mat-card-title>
               </mat-card-header>
@@ -51,12 +55,16 @@
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
                   <div *ngIf='accessories.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of accessories'>
-                    <mat-card class='lsItem' (click)='viewProd(itm)'>
-                      <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
+                    <mat-card class='lsItem mat-elevation-z8' (click)='viewProd(itm)'>
                       <mat-card-content>
-                        <p>{{ itm.name }}</p>
-                        <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
-                        <span>{{ ('₱ ') + itm.price }}</span>
+                        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout.md='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                          <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
+                          <div class='item item-2' fxFlex='50%'>
+                            <p><b>{{ itm.name }}</b></p>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>{{ ('₱ ') + itm.price }}</span>
+                          </div>
+                        </div>
                       </mat-card-content>
                     </mat-card>
                   </div>
@@ -65,7 +73,7 @@
             </mat-card>
           </mat-tab>
           <mat-tab label='Wheels'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Wheels</mat-card-title>
               </mat-card-header>
@@ -80,12 +88,16 @@
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
                   <div *ngIf='wheels.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of wheels'>
-                    <mat-card class='lsItem' (click)='viewProd(itm)'>
-                      <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
+                    <mat-card class='lsItem mat-elevation-z8' (click)='viewProd(itm)'>
                       <mat-card-content>
-                        <p>{{ itm.name }}</p>
-                        <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
-                        <span>{{ ('₱ ') + itm.price }}</span>
+                        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout.md='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                          <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
+                          <div class='item item-2' fxFlex='50%'>
+                            <p><b>{{ itm.name }}</b></p>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>{{ ('₱ ') + itm.price }}</span>
+                          </div>
+                        </div>
                       </mat-card-content>
                     </mat-card>
                   </div>
@@ -94,7 +106,7 @@
             </mat-card>
           </mat-tab>
           <mat-tab label='Components'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Components</mat-card-title>
               </mat-card-header>
@@ -109,12 +121,16 @@
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
                   <div *ngIf='components.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of components'>
-                    <mat-card class='lsItem' (click)='viewProd(itm)'>
-                      <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
+                    <mat-card class='lsItem mat-elevation-z8' (click)='viewProd(itm)'>
                       <mat-card-content>
-                        <p>{{ itm.name }}</p>
-                        <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
-                        <span>{{ ('₱ ') + itm.price }}</span>
+                        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout.md='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                          <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
+                          <div class='item item-2' fxFlex='50%'>
+                            <p><b>{{ itm.name }}</b></p>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>{{ ('₱ ') + itm.price }}</span>
+                          </div>
+                        </div>
                       </mat-card-content>
                     </mat-card>
                   </div>
@@ -123,7 +139,7 @@
             </mat-card>
           </mat-tab>
           <mat-tab label='Workshop'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Workshop</mat-card-title>
               </mat-card-header>
@@ -138,12 +154,16 @@
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row wrap' fxLayoutAlign='center center' fxLayoutGap='20px'>
                   <div *ngIf='workshop.length == 0'>No products yet</div>
                   <div class='item item-1' fxFlex='25%' fxFlex.xs='100%' *ngFor='let itm of workshop'>
-                    <mat-card class='lsItem' (click)='viewProd(itm)'>
-                      <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='70px' height='70px' class='imgBorder'>
+                    <mat-card class='lsItem mat-elevation-z8' (click)='viewProd(itm)'>
                       <mat-card-content>
-                        <p>{{ itm.name }}</p>
-                        <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
-                        <span>{{ ('₱ ') + itm.price }}</span>
+                        <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout.md='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
+                          <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
+                          <div class='item item-2' fxFlex='50%'>
+                            <p><b>{{ itm.name }}</b></p>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>{{ ('₱ ') + itm.price }}</span>
+                          </div>
+                        </div>
                       </mat-card-content>
                     </mat-card>
                   </div>
@@ -155,4 +175,7 @@
       </mat-card-content>
     </mat-card>
   </div>
+</div>
+<div class='progBar' [class.doneLoading]='!prgLoading'>
+  <mat-progress-spinner mode='indeterminate' value='25' color='accent'></mat-progress-spinner>
 </div>
