--- a/src/app/client/cs-products/cs-products.component.scss
+++ b/src/app/client/cs-products/cs-products.component.scss
@@ -1,8 +1,18 @@
 .lsItem {
   margin-bottom: 10px;
   cursor: pointer;
+  transition: 0.2s;
+  &:hover {
+    transform: scale(1.2);
+    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+    z-index: 999;
+  }
 }
 
 .imgBorder {
   border: 1px solid black;
+}
+
+.doneLoading {
+  display: none;
 }
