--- a/src/app/client/cs-products/view-prod/view-prod.component.html
+++ b/src/app/client/cs-products/view-prod/view-prod.component.html
@@ -1,18 +1,23 @@
-<h2>{{ info.name }}</h2>
-<span>{{ ((info.isAvailable) ? 'In store' : 'Not available') }}</span>
-<div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='10px'>
-  <div class='item item-1' fxFlex='50%'>
-    <mat-card>
-      <mat-card-content>
-        <img [src]='info.img | imageData' width='100%' height='100%'>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  <div class='item item-2' fxFlex='50%'>
-    <p>Color: {{ info.color }}</p>
-    <p>Price: {{ info.price }}</p>
-    <ul *ngIf='info.desc'>
-      <li *ngFor='let desc of info.desc'>{{ desc }}</li>
-    </ul>
-  </div>
-</div>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{ info.name }}</mat-card-title>
+    <mat-card-subtitle>{{ ((info.isAvailable) ? '(In store)' : '(Not available)') }}</mat-card-subtitle>
+    <div class='spacer'></div>
+    <button mat-button (click)='close()'><mat-icon>clear</mat-icon></button>
+  </mat-card-header>
+  <mat-card-content class='fixHt'>
+    <div class='container' fxLayout fxLayout.xs='column' fxLayout.sm='column' fxLayout.md='column' fxLayout='column' fxLayoutAlign='center center' fxLayoutGap='10px'>
+      <div class='item item-1' fxFlex='100%'>
+        <img mat-card-image [src]='info.img | imageData' width='100%' height='100%'>
+      </div>
+      <div class='item item-2' fxFlex='100%'>
+        <p>Color: {{ info.color }}</p>
+        <p>Price: {{ info.price }}</p>
+        <p *ngFor='let desc of info.desc'>{{ desc }}</p>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
+<!-- <ul *ngIf='info.desc'>
+  <li *ngFor='let desc of info.desc'>{{ desc }}</li>
+</ul> -->
