--- a/src/app/client/cs-services/cs-services.component.html
+++ b/src/app/client/cs-services/cs-services.component.html
@@ -1,20 +1,20 @@
-<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin-top: 7px; width: 100%'>
+<div class='container' fxLayout fxLayout.xs='column' fxLayoutAlign='center' fxLayoutGap='20px' style='margin: 10px'>
   <div class='item item-2' fxFlex='100%'>
-    <mat-card>
+    <mat-card class='mat-elevation-z8'>
       <mat-card-header>
         <mat-card-title>Services Offered</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class='container' fxLayout fxLayout.xs='column' fxLayout='column' fxLayoutAlign='center' fxLayoutGap='20px'>
           <div class='item item-1' fxFlex='100%'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Service Packages</mat-card-title>
               </mat-card-header>
               <mat-card-content>
                 <div class='container' fxLayout fxLayout.xs='column' fxLayout='row' fxLayoutAlign='center' fxLayoutGap='20px'>
                   <div class='item item-1' fxFlex='30%'>
-                    <mat-card>
+                    <mat-card class='mat-elevation-z8'>
                       <mat-card-header>
                         <mat-card-title>Php 2,250.00</mat-card-title>
                       </mat-card-header>
@@ -28,7 +28,7 @@
                     </mat-card>
                   </div>
                   <div class='item item-2' fxFlex='30%'>
-                    <mat-card>
+                    <mat-card class='mat-elevation-z8'>
                       <mat-card-header>
                         <mat-card-title>Php 3,550.00</mat-card-title>
                       </mat-card-header>
@@ -47,7 +47,7 @@
                     </mat-card>
                   </div>
                   <div class='item item-3' fxFlex='30%'>
-                    <mat-card>
+                    <mat-card class='mat-elevation-z8'>
                       <mat-card-header>
                         <mat-card-title>Php 4,750.00</mat-card-title>
                       </mat-card-header>
@@ -73,7 +73,7 @@
             </mat-card>
           </div>
           <div class='item item-2' fxFlex='100%'>
-            <mat-card>
+            <mat-card class='mat-elevation-z8'>
               <mat-card-header>
                 <mat-card-title>Bike Shop Repair Services</mat-card-title>
               </mat-card-header>
