--- a/src/app/server/login/login.component.html
+++ b/src/app/server/login/login.component.html
@@ -1,34 +1,36 @@
-<div class='container gap'
-  fxLayout
-  fxLayout.xs='column'
-  fxLayout.sm='row'
-  fxLayout.md='row'
-  fxLayoutAlign='center'>
-  <div class='item item-1' fxFlex='30%'></div>
-  <mat-card class='item item-2' fxFlex='40%'>
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form (ngSubmit)='login(loginForm, $event)'>
-        <div
-          class='containerX'
-          fxLayout='column'
-          fxLayoutAlign='center'>
-          <mat-form-field class='item item-1' fxFlex='70%'>
-            <mat-label>Username</mat-label>
-            <input matInput type='text' [(ngModel)]='loginForm.username' name='username' required>
-          </mat-form-field>
-          <br>
-          <mat-form-field class='item item-2' fxFlex='70%'>
-            <mat-label>Password</mat-label>
-            <input matInput type='password' [(ngModel)]='loginForm.password' name='password' required>
-          </mat-form-field>
-          <br>
-          <button mat-raised-button class='item item-3' fxFlex='70%' type='submit' color='primary'>Login</button>
-        </div>
-      </form>
-    </mat-card-content>
-  </mat-card>
-  <div class='item item-3' fxFlex='30%'></div>
+<!-- <div class="wrapper">
+  <div class="overlay">
+    <div class="spinner-wrapper">
+      <mat-progress-spinner class='appSpinner' color='accent' mode='indeterminate' value='25'></mat-progress-spinner>
+    </div>
+  </div>
+</div> -->
+<mat-card class='mat-elevation-z8'>
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form (ngSubmit)='login(loginForm, $event)'>
+      <div
+        class='containerX'
+        fxLayout='column'
+        fxLayoutAlign='center'>
+        <mat-form-field class='item item-1' fxFlex='70%'>
+          <mat-label>Username</mat-label>
+          <input matInput type='text' [(ngModel)]='loginForm.username' name='username' required>
+        </mat-form-field>
+        <br>
+        <mat-form-field class='item item-2' fxFlex='70%'>
+          <mat-label>Password</mat-label>
+          <input matInput type='password' [(ngModel)]='loginForm.password' name='password' required>
+        </mat-form-field>
+        <br>
+        <button mat-raised-button class='item item-3' fxFlex='70%' type='submit' color='primary'>Login</button>
+      </div>
+    </form>
+  </mat-card-content>
+</mat-card>
+
+<div class='progBar' [class.doneLoading]='!loginProc'>
+  <mat-progress-spinner mode='indeterminate' value='25' color='accent'></mat-progress-spinner>
 </div>
