--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,14 +44,14 @@ $sys-theme: mat-light-theme($def-theme-primary, $def-theme-accent, $def-theme-wa
 
 
 html, body { height: 100%; margin: 0; }
-body { min-height: 100%; margin: 0; margin-bottom: -150px; font-family: 'CenturyGothic' !important;}
+body { margin: 0; font-family: 'CenturyGothic' !important; background-color: #C9C9C9; }
 .custom-dialog-container .mat-dialog-container {
   padding: 0;
 	border: 1px solid #0063EA;
 }
 
 .siteFontSize {
-	font-size: 1.2em;
+	font-size: 1.1em;
 }
 
 .mat-tooltip {
@@ -81,4 +81,49 @@ p.indent {
 
 .mat-card-title {
 	font-weight: bold;
+}
+
+.appSpinner {
+	margin: 0px auto;
+	z-index: 1;
+}
+
+.wrapper {
+  width: 100%;
+}
+
+.overlay {
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+}
+
+.spinner-wrapper {
+  display: flex;
+  justify-content: center center;
+}
+
+.progBar {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.1);
+	z-index: 999;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.mat-dialog-container-custom > mat-dialog-container {
+	padding: 0px;
+}
+
+.tooltip-bg {
+	background-color: #69f0ae;
 }
