Gallery image change name

--- a/src/app/client/cs-home/cs-home.component.html
+++ b/src/app/client/cs-home/cs-home.component.html
@@ -110,6 +110,10 @@
     </mat-card>
   </div>
 </div>
+
+<div>
+
+</div>
 <!-- <div #mapContainer id="map"></div> -->
 <div class='progBar' [class.doneLoading]='!prgLoading'>
   <mat-progress-spinner mode='indeterminate' value='25' color='accent'></mat-progress-spinner>
