--- a/src/app/client/cs-products/cs-products.component.html
+++ b/src/app/client/cs-products/cs-products.component.html
@@ -28,7 +28,7 @@
                           <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
                           <div class='item item-2' fxFlex='50%'>
                             <p><b>{{ itm.name }}</b></p>
-                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Out of Stock') }})</span><br>
                             <span>{{ ('₱ ') + itm.price }}</span>
                           </div>
                         </div>
@@ -61,7 +61,7 @@
                           <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
                           <div class='item item-2' fxFlex='50%'>
                             <p><b>{{ itm.name }}</b></p>
-                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Out of Stock') }})</span><br>
                             <span>{{ ('₱ ') + itm.price }}</span>
                           </div>
                         </div>
@@ -94,7 +94,7 @@
                           <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
                           <div class='item item-2' fxFlex='50%'>
                             <p><b>{{ itm.name }}</b></p>
-                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Out of Stock') }})</span><br>
                             <span>{{ ('₱ ') + itm.price }}</span>
                           </div>
                         </div>
@@ -127,7 +127,7 @@
                           <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
                           <div class='item item-2' fxFlex='50%'>
                             <p><b>{{ itm.name }}</b></p>
-                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Out of Stock') }})</span><br>
                             <span>{{ ('₱ ') + itm.price }}</span>
                           </div>
                         </div>
@@ -160,7 +160,7 @@
                           <img [src]='"data:image/png;jpg;jpeg;base64, " + itm.img | imageData' width='100%' height='100%' class='imgBorder item item-1' fxFlex='50%'>
                           <div class='item item-2' fxFlex='50%'>
                             <p><b>{{ itm.name }}</b></p>
-                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Not available') }})</span><br>
+                            <span>({{ ((itm.isAvailable) ? 'In store' : 'Out of Stock') }})</span><br>
                             <span>{{ ('₱ ') + itm.price }}</span>
                           </div>
                         </div>
